[metadata]
name = HDDModelDecoder
author = KOLANICH
url = https://gitlab.com/KOLANICH/HDDModelDecoder.py
description = Decodes HDD characteristics (like capacity, RPM or buffer size) encoded in model numbers/names.
long_description = file: ReadMe.md
keywords = hdd, decode, extract, model, Seagate, WD, Western-Digital, HGST, Hitachi, Samsung, Toshiba
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent

[options]
python_requires = >=3.4
zip_safe = False
include_package_data = True
packages = HDDModelDecoder, HDDModelDecoder.utils, HDDModelDecoder.ml, HDDModelDecoder.ml.WD_models
setup_requires = setuptools_scm;
test_suite = tests.test

[options.extras_require]
machine-learning based prediction = Chassis @ git+https://gitlab.com/KOLANICH/Chassis.py.git; AutoXGBoost @ git+https://gitlab.com/KOLANICH/AutoXGBoost.py.git; pandas; lazily @ git+https://gitlab.com/KOLANICH/lazily.py.git; lazy_object_proxy @ git+https://github.com/erikrose/more-itertools.git

[options.entry_points]
console_scripts = HDDModelDecoder = HDDModelDecoder.__main__:main

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]